--- a/index.html
+++ b/index.html
@@ -1,8 +1,60 @@
-<html>
-  <head>
-    <title>我的博客</title>
-  </head>
-  <body>
-     <h1>Hello To My World</h1>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>MyHome</title>
+<meta name="description" content="interneto svetainių kūrimas" />
+<meta name="keywords" content="dizainas" />
+<meta name="robots" content="index, follow" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+<table border="0" align="center" cellpadding="0" cellspacing="0" class="table-corners">
+  <tr>
+    <td class="corner1">&nbsp;</td>
+    <td class="bg-white">&nbsp;</td>
+    <td class="corner2">&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="bg-white">&nbsp;</td>
+    <td><table border="0" align="center" cellpadding="0" cellspacing="0" class="main-table">
+      <tr>
+        <td colspan="2" class="top-img"><p><br />
+              <br />
+              <span class="website-title">Cozy Room template  </span><br />
+              <br />
+          - A fresh template with rounded corners<br />
+          - 900px width, that can be easily changed</p>
+          </td>
+      </tr>
+      <tr>
+        <td colspan="2" class="menu"><a class="menu-link" href="#">Design</a> <a class="menu-link" href="#">Portfolio</a> <a class="menu-link" href="#">Present</a> <a class="menu-link" href="#">Links</a> <a class="menu-link" href="index.html">Contact information </a> </td>
+      </tr>
+      <tr>
+        <td class="content"><h1>Terms of Use</h1>
+          <p>You can use this template for any purpose you want, but you have to leave a link <a title="Interneto svetainių kūrimas" href="#">Svetainių kūrimas</a>, that is placed at the bottom of this page.</p>
+          <h1>A Room </h1>
+          <p>A <strong>room</strong>, in <a href="#" title="Architecture">architecture</a>, is any distinguishable space within a structure. Most typically a room is separated by interior walls from other spaces or <a href="#" title="Passage (architecture)">passageways</a>; moreover, it is separated by an exterior wall from outdoor areas. Historically the use of rooms dates at least to early Minoan cultures about 2200 BC, where excavations on Santorini, <a href="#" title="Greece">Greece</a> at Akrotiri reveal clearly defined rooms within structures. &lt;...&gt;</p>
+          <p><em>From Wikipedia.</em></p></td>
+        <td width="200" class="content-right"><a class="menu-right" href="#">Cozy rooms</a>
+            <a class="menu-right" href="#">Friendly pets</a>
+            <a class="menu-right" href="#">Friendly friends :-) </a>
+          <a class="menu-right" href="#">Funny guests</a>
+		  <a class="menu-right" href="#">That's  perfect</a></td>
+      </tr>
+      <tr>
+        <td colspan="2"><span class="made-in_text">Design by <!-- You can use this template for any purpose you want, but you have to leave this link --><a class="made-in" title="Interneto svetainių kūrimas" href="#">Svetainių kūrimas</a></span></td>
+      </tr>
+    </table></td>
+    <td class="bg-white">&nbsp;</td>
+  </tr>
+  <tr>
+    <td class="corner3">&nbsp;</td>
+    <td class="bg-white">&nbsp;</td>
+    <td class="corner4">&nbsp;</td>
+  </tr>
+</table>
+<p class="style1">&nbsp;</p>
+</body>
 </html>
