--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>MyHome</title>
+<title>MyHomeWPJ</title>
 <meta name="description" content="interneto svetainių kūrimas" />
 <meta name="keywords" content="dizainas" />
 <meta name="robots" content="index, follow" />
